--- a/package.json
+++ b/package.json
@@ -1,7 +1,7 @@
 {
   "name": "simple-onion-router-network",
   "version": "1.0.0",
-  "description": "Simple Tor network implemenation",
+  "description": "Simple Tor network implementation",
   "main": "src/index.ts",
   "scripts": {
     "test": "jest --runInBand",
@@ -10,8 +10,10 @@
   "author": "Baptiste Florentin",
   "license": "MIT",
   "dependencies": {
+    "axios": "^1.6.7",
     "body-parser": "^1.20.2",
-    "express": "^4.18.2"
+    "express": "^4.18.2",
+    "ts-node": "^10.9.2"
   },
   "devDependencies": {
     "@types/express": "^4.17.21",
